--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 *.log
 *.pot
 *.pyc
-djangobookstore/__pycache__
-polls/__pycache__
+__pycache__
 db.sqlite3
 media
 
@@ -32,7 +31,7 @@ media
 # Distribution / packaging 
 .Python build/ 
 develop-eggs/ 
-dist/ 
+# dist/ 
 downloads/ 
 eggs/ 
 .eggs/ 
